Fix alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,13 @@ body {
 img {
   display: block;
   max-width: 100%;
-  align-self: start;
+}
+
+header > div {
+  justify-content: space-between;
+  align-items: center;
+  display: flex;
+  padding: 1.5em;
 }
 
 .grid {
@@ -75,6 +81,11 @@ img {
   .photos {
     grid-template-columns: repeat(2, 1fr);
   }
+
+  #what-people-are-saying article {
+display: grid;
+grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 @media (min-width: 60em){
@@ -82,13 +93,6 @@ img {
     grid-template-columns: repeat(4, 1fr);
   }
   
-}
-
-header > div {
-  justify-content: space-between;
-  align-items: center;
-  display: flex;
-  padding: 1.5em;
 }
 
 nav ul {
@@ -112,6 +116,17 @@ nav ul li a:visited {
   color: black;
   text-decoration: none;
 }
+
+#what-people-are-saying {
+background-color: black;
+color: white;
+flex-direction: inherit;
+padding: 3em;
+}
+
+#what-people-are-saying h3 {
+  text-align: center;
+  }
 
 .add-to-cart-button {
 	width: 7%;
